--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "require": {
         "kriswallsmith/buzz": "v0.10",
-        "michelf/php-markdown": "1.5",
-        "jv2222/ezsql": "dev-master"
+        "michelf/php-markdown": "1.5"
     }
 }
